tests/negative/neg_pr114_legacy_range_dots.safe
-- Test: neg_pr114_legacy_range_dots
-- Description: PR11.4 requires to in source ranges and rejects legacy ..
-- Expected: REJECT source_frontend_error

package Neg_PR114_Legacy_Range_Dots

   type Small is range 0 .. 10;


